--- a/Login-SignUp/Firebase - Login/login.css
+++ b/Login-SignUp/Firebase - Login/login.css
@@ -4,3 +4,55 @@
     gap: 5px;
     font-size: 16px;
 }
+
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #6a11cb;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+}
+
+.custom-hover{
+    text-decoration: none;
+    position: relative;
+}
+.custom-hover::after{
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0px;
+    bottom: -2px;
+    width: 0px;
+    height: 1px;
+    background-color: #fff;
+}
+
+.custom-hover:hover::after{
+    width: 100%;
+    transition: all .3s;
+}
+
+.custom-hover:hover {
+    color: #fff !important;
+}
+
+.icon:hover {
+    scale: 1.3;
+    transition: all .2s;
+}
+
+.facebook:hover {
+    color: 	#1877F2 !important;
+}
+/* 
+.github:hover {
+    color: #54575A !important;
+} */
+
+.google:hover {
+    color: #EA4335 !important;
+}
